--- a/01-ejercicio-html-css/empleos.html
+++ b/01-ejercicio-html-css/empleos.html
@@ -1,1 +1,147 @@
 <!-- Aquí el contenido de tu página empleos.html -->
+
+<!DOCTYPE html>
+<html lang="es">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>DevJobs - Empleos</title>
+    <meta name="description" content="Encuentra las mejores ofertas de trabajo para desarrolladores en DevJobs.">
+    <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+    <header>
+        
+        <h1>
+            <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <polyline points="16 18 22 12 16 6"></polyline>
+                <polyline points="8 6 2 12 8 18"></polyline>
+            </svg>    
+            DevJobs
+        </h1>
+
+        <nav>
+            <a href="./index.html">Inicio</a>
+        </nav>
+
+        <div>
+            <button> Publicar un empleo </button>
+            <!--<button>Iniciar sesión</button>-->
+        </div>
+    </header>
+
+    <main>
+
+        <section class="seccion-busqueda-empleos">
+            <h1>Encuentra tu próximo trabajo</h1>
+            <p>Explora las ofertas de empleo más recientes y encuentra el trabajo ideal para ti.</p>
+
+            <form role="search">
+                <div class="barra-busqueda-empleo">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-search-icon lucide-search"><path d="m21 21-4.34-4.34"/><circle cx="11" cy="11" r="8"/></svg>
+                    <input type="text" placeholder="Buscar trabajos, empresas o habilidades" />
+                </div>
+
+                <div class="filtros-busqueda-empleo">
+                    <select name="tecnologia" id="filtro-tecnologia">
+                        <option value="">Tecnología</option>
+                        <option value="javascript">JavaScript</option>
+                        <option value="python">Python</option>
+                        <option value="java">Java</option>
+                        <option value="react">React</option>
+                        <option value="nodejs">Node.js</option>
+                    </select>
+
+                    <select name="location" id="location">
+                        <option value="">Ubicación</option>
+                        <option value="remote">Remoto</option>
+                        <option value="onsite">Presencial</option>
+                        <option value="hybrid">Híbrido</option>
+                        <option value="nuevayork">Nueva York</option>
+                        <option value="madrid">Madrid</option>
+                        <option value="londres">Londres</option>
+                    </select>
+
+                    <select name="experience-level" id="experience-level">
+                        <option value="">Nivel de experiencia</option>
+                        <option value="junior">Junior</option>
+                        <option value="mid">Mid-level</option>
+                        <option value="senior">Senior</option>
+                        <option value="lead">Lead</option>
+                    </select>
+                </div>
+            </form>
+        </section>
+
+        <section class="seccion-resultados-empleos">
+            <h2>Resultados de búsqueda</h2>
+            
+            <div class="jobs-listings">
+                <article class="job-listing-card">
+                    <div>
+                        <h3>Ingeniero de Software</h3>
+                        <small>Tech Solutions Inc. | Remoto</small>
+                        <p>Buscamos un ingeniero de software con experiencia en desarrollo web y conocimientos en JavaScript, React
+                        y
+                        Node.js. El candidato ideal debe ser capaz de trabajar en equipo y tener buenas habilidades de
+                        comunicación.</p>
+                    </div>
+                    <button class="button-apply-job" id="boton-importante">Aplicar</button>
+                </article>
+
+                <article class="job-listing-card">
+                    <div>
+                        <h3>Analista de Datos</h3>
+                        <small>Data Driven Co. | Ciudad de México</small>
+                        <p>Estamos buscando un analista de datos con experiencia en el manejo de grandes conjuntos de datos y
+                        herramientas de visualización. Se requiere conocimiento en SQL, Python y R.</p>
+                    </div>
+                    <button class="button-apply-job">Aplicar</button>
+                </article>
+
+                <article class="job-listing-card">
+                    <div>
+                        <h3>Desarrollador de Aplicaciones Móviles</h3>
+                        <small>Mobile Apps Ltd. | Guadalajara</small>
+                        <p>Buscamos un desarrollador de aplicaciones móviles con experiencia en iOS y/o Android. El candidato debe
+                        tener conocimientos en Swift, Kotlin y el desarrollo de interfaces de usuario.</p>
+                    </div>
+                    <button class="button-apply-job">Aplicar</button>
+                </article>
+
+                <article class="job-listing-card">
+                    <div>
+                        <h3>Ingeniero de DevOps</h3>
+                        <small>Cloud Services SA | Remoto</small>
+                        <p>Estamos buscando un ingeniero de DevOps con experiencia en la gestión de infraestructuras en la nube,
+                        automatización de procesos y herramientas de integración continua. Se requiere conocimiento en AWS, Azure
+                        o
+                        GCP.</p>
+                    </div>
+                    <button class="button-apply-job">Aplicar</button>
+                </article>
+            </div>
+
+            <nav class="paginacion">
+                <a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-chevron-left-icon lucide-chevron-left"><path d="m15 18-6-6 6-6"/></svg></a>
+                <a class ="is-active" href="#">1</a>
+                <a href="#">2</a>
+                <a href="#">3</a>
+                <a href="#">4</a>
+                <a href="#">5</a>
+                <a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-chevron-right-icon lucide-chevron-right"><path d="m9 18 6-6-6-6"/></svg></a>
+            </nav>
+        </section>
+
+    </main>
+
+    <footer>
+        <small>© 2025 DevJobs. Todos los derechos reservados.</small>
+    </footer>
+
+</body>
+
+</html>
