--- a/01-ejercicio-html-css/index.html
+++ b/01-ejercicio-html-css/index.html
@@ -1,1 +1,87 @@
 <!-- Aquí el contenido de tu página index.html -->
+
+<!DOCTYPE html>
+<html lang="es">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>DevJobs - Inicio</title>
+    <meta name="description" content="Encuentra las mejores ofertas de trabajo para desarrolladores en DevJobs.">
+    <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+    <header>
+        <h1>DevJobs</h1>
+
+        <nav>
+            <a href="index.html">Inicio</a>
+            <a href="empleos.html">Empleos</a>
+        </nav>
+
+        <div>
+            <button>Publicar un empleo</button>
+            <button>Iniciar sesión</button>
+        </div>
+    </header>
+
+    <main>
+
+        <section>
+             <img class = "background-image"
+                src="./background.webp"
+                alt="Imagen de programador trabajando"
+            />
+
+            <h1>Encuentra el trabajo de tus sueños</h1>
+            <p>Únete a la comunidad de desarrolladores y encuentra el trabajo que siempre has querido.</p>
+        
+            <form role="search">
+                <div>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-search-icon lucide-search"><path d="m21 21-4.34-4.34"/><circle cx="11" cy="11" r="8"/></svg>
+                </div>
+
+                <input required type="text" placeholder="Buscar empleos por título, habilidad o empresa" />
+                <button type="submit">Buscar</button>
+            </form>
+        </section>
+
+        <section>
+            <header>
+                <h2>¿Por qué DevJobs?</h2>
+                <p>DevJobs es la principal bolsa de trabajo para desarrolladores. Conectamos a los desarrolladores con las mejores empresas del mundo.</p>
+            </header>
+
+            <footer>
+                <article>
+                    <svg  
+                        xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-briefcase"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M3 7m0 2a2 2 0 0 1 2 -2h14a2 2 0 0 1 2 2v9a2 2 0 0 1 -2 2h-14a2 2 0 0 1 -2 -2z" /><path d="M8 7v-2a2 2 0 0 1 2 -2h4a2 2 0 0 1 2 2v2" /><path d="M12 12l0 .01" /><path d="M3 13a20 20 0 0 0 18 0" />
+                    </svg>
+                    <h3>Encuentra el trabajo de tus sueños</h3>
+                    <p>DevJobs te ayuda a encontrar el trabajo que siempre has querido.</p>
+                </article>
+
+                <article>
+                    <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-users"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M9 7m-4 0a4 4 0 1 0 8 0a4 4 0 1 0 -8 0" /><path d="M3 21v-2a4 4 0 0 1 4 -4h4a4 4 0 0 1 4 4v2" /><path d="M16 3.13a4 4 0 0 1 0 7.75" /><path d="M21 21v-2a4 4 0 0 0 -3 -3.85" /></svg>
+                    <h3>Conecta con las mejores empresas</h3>
+                    <p>DevJobs te conecta con las empresas más innovadoras del sector tecnológico.</p>
+                </article>
+
+                <article>
+                    <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-cash"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M7 15h-3a1 1 0 0 1 -1 -1v-8a1 1 0 0 1 1 -1h12a1 1 0 0 1 1 1v3" /><path d="M7 9m0 1a1 1 0 0 1 1 -1h12a1 1 0 0 1 1 1v8a1 1 0 0 1 -1 1h-12a1 1 0 0 1 -1 -1z" /><path d="M12 14a2 2 0 1 0 4 0a2 2 0 0 0 -4 0" /></svg>
+                    <h3>Obtén el salario que mereces</h3>
+                    <p>DevJobs te ayuda a obtener el salario que realmente mereces.</p>
+                </article> 
+            </footer>
+        </section>
+
+    </main>
+
+    <footer>
+        <small>© 2025 DevJobs. Todos los derechos reservados.</small>
+    </footer>
+
+</body>
+
+</html>
