feat: improve accessibility for job listings page
- Added ARIA attributes to SVG icons with aria-hidden="true" for decorative elements
- Wrapped job listings in semantic <ul> element to improve list structure
- Added descriptive aria-labels to navigation elements for better screen reader support
- Enhanced pagination controls with title and aria-label attributes for better context
- Added aria-label to main navigation for clearer site structure

--- a/01-ejercicio-html-css/empleos.html
+++ b/01-ejercicio-html-css/empleos.html
@@ -13,17 +13,18 @@
 
 <body>
     <header>
-        
+
         <h1>
-            <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+            <!-- El atributo aria-hidden="true" es un atributo que se utiliza para indicar que un elemento no debe ser leído por un lector de pantalla. Los lectores de pantalla son herramientas que leen el contenido del sitio, y sirve para aquellas personas que no pueden ver el contenido visual como tal. Es una propiedad que se usa mucho a nivel de accesibilidad. Cuando el SVG no tiene valor semántico, se puede usar aria-hidden="true". Si el SVG aporta valor, si es importante que sea visible por los lectores -->
+            <svg aria-hidden="true" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+                stroke-width="2" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                 <polyline points="16 18 22 12 16 6"></polyline>
                 <polyline points="8 6 2 12 8 18"></polyline>
-            </svg>    
+            </svg>
             DevJobs
         </h1>
 
-        <nav>
+        <nav aria-label="Navegación principal">
             <a href="./index.html">Inicio</a>
         </nav>
 
@@ -41,7 +42,12 @@
 
             <form role="search">
                 <div class="barra-busqueda-empleo">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-search-icon lucide-search"><path d="m21 21-4.34-4.34"/><circle cx="11" cy="11" r="8"/></svg>
+                    <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                        viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                        stroke-linejoin="round" class="lucide lucide-search-icon lucide-search">
+                        <path d="m21 21-4.34-4.34" />
+                        <circle cx="11" cy="11" r="8" />
+                    </svg>
                     <input type="text" placeholder="Buscar trabajos, empresas o habilidades" />
                 </div>
 
@@ -78,70 +84,97 @@
 
         <section class="seccion-resultados-empleos">
             <h2>Resultados de búsqueda</h2>
-            
-            <div class="jobs-listings">
-                <article class="job-listing-card">
-                    <div>
-                        <h3>Ingeniero de Software</h3>
-                        <small>Tech Solutions Inc. | Remoto</small>
-                        <p>Buscamos un ingeniero de software con experiencia en desarrollo web y conocimientos en JavaScript, React
-                        y
-                        Node.js. El candidato ideal debe ser capaz de trabajar en equipo y tener buenas habilidades de
-                        comunicación.</p>
-                    </div>
-                    <button class="button-apply-job" id="boton-importante">Aplicar</button>
-                </article>
 
-                <article class="job-listing-card">
-                    <div>
-                        <h3>Analista de Datos</h3>
-                        <small>Data Driven Co. | Ciudad de México</small>
-                        <p>Estamos buscando un analista de datos con experiencia en el manejo de grandes conjuntos de datos y
-                        herramientas de visualización. Se requiere conocimiento en SQL, Python y R.</p>
-                    </div>
-                    <button class="button-apply-job">Aplicar</button>
-                </article>
-
-                <article class="job-listing-card">
-                    <div>
-                        <h3>Desarrollador de Aplicaciones Móviles</h3>
-                        <small>Mobile Apps Ltd. | Guadalajara</small>
-                        <p>Buscamos un desarrollador de aplicaciones móviles con experiencia en iOS y/o Android. El candidato debe
-                        tener conocimientos en Swift, Kotlin y el desarrollo de interfaces de usuario.</p>
-                    </div>
-                    <button class="button-apply-job">Aplicar</button>
-                </article>
-
-                <article class="job-listing-card">
-                    <div>
-                        <h3>Ingeniero de DevOps</h3>
-                        <small>Cloud Services SA | Remoto</small>
-                        <p>Estamos buscando un ingeniero de DevOps con experiencia en la gestión de infraestructuras en la nube,
-                        automatización de procesos y herramientas de integración continua. Se requiere conocimiento en AWS, Azure
-                        o
-                        GCP.</p>
-                    </div>
-                    <button class="button-apply-job">Aplicar</button>
-                </article>
+            <div>
+                <!-- Está genial lo que hiciste, si? Lo que hicimos aquí es agrupar los resultados en una lista. Esto se hace por semántica y que, si lo pensamos bien, lo que estamos haciendo con cada artículo es listar los resultados de búsqueda de una manera desordenada. Siempre que tengamos elementos parecidos relacionados entre si, nos da a entender que puede ser una lista -->
+                <ul class="jobs-listings">
+                    <li>
+                        <article class="job-listing-card">
+                            <div>
+                                <h3>Ingeniero de Software</h3>
+                                <small>Tech Solutions Inc. | Remoto</small>
+                                <p>Buscamos un ingeniero de software con experiencia en desarrollo web y conocimientos
+                                    en JavaScript, React
+                                    y
+                                    Node.js. El candidato ideal debe ser capaz de trabajar en equipo y tener buenas
+                                    habilidades de
+                                    comunicación.</p>
+                            </div>
+                            <button class="button-apply-job" id="boton-importante">Aplicar</button>
+                        </article>
+                    </li>
+                    <li>
+                        <article class="job-listing-card">
+                            <div>
+                                <h3>Analista de Datos</h3>
+                                <small>Data Driven Co. | Ciudad de México</small>
+                                <p>Estamos buscando un analista de datos con experiencia en el manejo de grandes
+                                    conjuntos de datos y
+                                    herramientas de visualización. Se requiere conocimiento en SQL, Python y R.</p>
+                            </div>
+                            <button class="button-apply-job">Aplicar</button>
+                        </article>
+                    </li>
+                    <li>
+                        <article class="job-listing-card">
+                            <div>
+                                <h3>Desarrollador de Aplicaciones Móviles</h3>
+                                <small>Mobile Apps Ltd. | Guadalajara</small>
+                                <p>Buscamos un desarrollador de aplicaciones móviles con experiencia en iOS y/o Android.
+                                    El candidato debe
+                                    tener conocimientos en Swift, Kotlin y el desarrollo de interfaces de usuario.</p>
+                            </div>
+                            <button class="button-apply-job">Aplicar</button>
+                        </article>
+                    </li>
+                    <li>
+                        <article class="job-listing-card">
+                            <div>
+                                <h3>Ingeniero de DevOps</h3>
+                                <small>Cloud Services SA | Remoto</small>
+                                <p>Estamos buscando un ingeniero de DevOps con experiencia en la gestión de
+                                    infraestructuras en la nube,
+                                    automatización de procesos y herramientas de integración continua. Se requiere
+                                    conocimiento en AWS, Azure
+                                    o
+                                    GCP.</p>
+                            </div>
+                            <button class="button-apply-job">Aplicar</button>
+                        </article>
+                    </li>
+                </ul>
             </div>
 
-            <nav class="paginacion">
-                <a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-chevron-left-icon lucide-chevron-left"><path d="m15 18-6-6 6-6"/></svg></a>
-                <a class ="is-active" href="#">1</a>
+            <!--
+            Buen uso de <nav> para la paginación. Para mejorar la accesibilidad:
+            - Agregamos aria-label="Paginación de resultados de búsqueda" al <nav>
+            - Agrega aria-label y title a los botones de anterior/siguiente. aria-label por lo que ya hemos comentado, y title para que, al hacer hover, se muestre el texto descriptivo de la acción que hace el botón. Esto es util cuando el link/botón no tiene texto visible.
+            - Los SVG decorativos deberían tener aria-hidden="true"
+            -->
+            <nav class="paginacion" aria-label="Paginación de resultados de búsqueda">
+                <a href="#" title="Ir a la página anterior" aria-label="Ir a la página anterior"><svg aria-hidden="true"
+                        xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                        class="lucide lucide-chevron-left-icon lucide-chevron-left">
+                        <path d="m15 18-6-6 6-6" />
+                    </svg></a>
+                <a class="is-active" href="#">1</a>
                 <a href="#">2</a>
                 <a href="#">3</a>
                 <a href="#">4</a>
                 <a href="#">5</a>
-                <a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-chevron-right-icon lucide-chevron-right"><path d="m9 18 6-6-6-6"/></svg></a>
+                <a href="#" title="Ir a la página siguiente" aria-label="Ir a la página siguiente"><svg
+                        aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                        fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                        stroke-linejoin="round" class="lucide lucide-chevron-right-icon lucide-chevron-right">
+                        <path d="m9 18 6-6-6-6" />
+                    </svg></a>
             </nav>
         </section>
-
     </main>
-
     <footer>
         <small>© 2025 DevJobs. Todos los derechos reservados.</small>
     </footer>
-
 </body>
 
 </html>
