--- a/02-ejercicio-javascript/empleos.html
+++ b/02-ejercicio-javascript/empleos.html
@@ -115,6 +115,14 @@
       <section class="jobs-result">
         <h2>Resultados de búsqueda</h2>
 
+        <div id="jobs-loading" class="jobs-loading">
+          Cargando empleos...
+        </div>
+
+        <div id="no-results-message" class="no-results" style="display: none;">
+          No se encontraron empleos que coincidan con tus criterios :(
+        </div>
+
         <ul class="jobs-listings">
           <!-- Aquí se insertan los empleos dinámicamente -->
         </ul>
@@ -171,5 +179,6 @@
     <footer>
       <small>&copy; 2025 DevJobs. Todos los derechos reservados.</small>
     </footer>
+
   </body>
 </html>
